Fix mega linter yml config (#88)
* Insiders version

* Use insiders version to validate current master branch

* Deploy alpha

* action

* debug

* Quick fix

* Ignore alpha for deploy-DEV job

* Rename config file in doc

* Allow several config file names

* v4 action

* apply_fixes fixxx

* typo

* remove unused import

--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -18,7 +18,7 @@
 #############################
 on:
   push:
-    branches-ignore: [master]
+    branches-ignore: [master, alpha]
   pull_request:
     branches-ignore: []
 
