--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,7 +1,7 @@
 # Configuration file for Mega-Linter
 # See all available variables at https://nvuillam.github.io/mega-linter/#configuration and in linters documentation
 
-APPLY_FIXES: true # When true, APPLY_FIXES must also be defined as environment variable (in github/workflows/mega-linter.yml or other CI tool)
+APPLY_FIXES: all # When active, APPLY_FIXES must also be defined as environment variable (in github/workflows/mega-linter.yml or other CI tool)
 # ENABLE: # If you use ENABLE variable, all other languages/formats/tooling formats will be disabled by default
 # ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
 DISABLE:
