--- a/megalinter/descriptors/clojure.yml
+++ b/megalinter/descriptors/clojure.yml
@@ -9,6 +9,7 @@ linters:
   # clj-kondo
   - linter_name: clj-kondo
     linter_url: https://github.com/borkdude/clj-kondo
+    linter_rules_url: https://github.com/borkdude/clj-kondo#features
     linter_banner_image_url: https://github.com/borkdude/clj-kondo/raw/master/logo/logo-300dpi.png
     linter_rules_configuration_url: https://github.com/borkdude/clj-kondo/blob/master/doc/config.md#configuration
     config_file_name: .clj-kondo/config.edn
