--- a/megalinter/descriptors/groovy.yml
+++ b/megalinter/descriptors/groovy.yml
@@ -11,7 +11,9 @@ linters:
   # npm-groovy-lint
   - class: GroovyNpmGroovyLintLinter
     linter_name: npm-groovy-lint
-    linter_url: https://github.com/nvuillam/npm-groovy-lint
+    linter_url: https://nvuillam.github.io/npm-groovy-lint/
+    linter_repo: https://github.com/nvuillam/npm-groovy-lint
+    linter_rules_url: https://codenarc.org/codenarc-rule-index.html
     linter_image_url: https://repository-images.githubusercontent.com/240214900/1dcdef80-773c-11ea-8c94-305acc58f5c6
     linter_rules_configuration_url: https://github.com/nvuillam/npm-groovy-lint#configuration
     linter_rules_inline_disable_url: https://github.com/nvuillam/npm-groovy-lint#disabling-rules-in-source
