--- a/megalinter/descriptors/kubernetes.yml
+++ b/megalinter/descriptors/kubernetes.yml
@@ -13,7 +13,8 @@ linters:
   # KUBEVAL
   - linter_name: kubeval
     name: KUBERNETES_KUBEVAL
-    linter_url: https://github.com/instrumenta/kubeval
+    linter_url: https://www.kubeval.com/
+    linter_repo: https://github.com/instrumenta/kubeval
     cli_config_extra_args:
       - "--strict"
     version_extract_regex: "((\\d+(\\.\\d+)+)|(dev))"
