--- a/megalinter/descriptors/lua.yml
+++ b/megalinter/descriptors/lua.yml
@@ -5,7 +5,9 @@ file_extensions:
 linters:
   # LUACHECK
   - linter_name: luacheck
-    linter_url: https://github.com/luarocks/luacheck
+    linter_url: https://luacheck.readthedocs.io
+    linter_repo: https://github.com/luarocks/luacheck
+    linter_rules_url: https://luacheck.readthedocs.io/en/stable/warnings.html
     linter_rules_configuration_url: https://luacheck.readthedocs.io/en/stable/config.html
     linter_rules_inline_disable_url: https://luacheck.readthedocs.io/en/stable/inline.html
     config_file_name: .luacheckrc
