--- a/megalinter/descriptors/protobuf.yml
+++ b/megalinter/descriptors/protobuf.yml
@@ -6,6 +6,7 @@ linters:
   # Protolint
   - linter_name: protolint
     linter_url: https://github.com/yoheimuta/protolint
+    linter_rules_url: https://github.com/yoheimuta/protolint#rules
     linter_rules_configuration_url: https://github.com/yoheimuta/protolint#rules
     config_file_name: .protolintrc.yml
     cli_config_arg_name: "--config_path"
