--- a/megalinter/descriptors/scala.yml
+++ b/megalinter/descriptors/scala.yml
@@ -12,9 +12,10 @@ linters:
   - linter_name: scalafix
     linter_url: https://scalacenter.github.io/scalafix/
     linter_repo: https://github.com/scalacenter/scalafix
-    linter_image_url: https://scalacenter.github.io/scalafix/img/scalacenter2x.png
+    linter_rules_url: https://scalacenter.github.io/scalafix/docs/rules/overview.html
     linter_rules_configuration_url: https://scalacenter.github.io/scalafix/docs/users/configuration.html
     linter_rules_inline_disable_url: https://scalacenter.github.io/scalafix/docs/users/suppression.html
+    linter_image_url: https://scalacenter.github.io/scalafix/img/scalacenter2x.png
     config_file_name: .scalafix.conf
     cli_config_arg_name: "--config"
     cli_lint_extra_args:
