--- a/megalinter/descriptors/cpp.yml
+++ b/megalinter/descriptors/cpp.yml
@@ -18,6 +18,7 @@ linters:
   - linter_name: cpplint
     name: CPP_CPPLINT
     linter_url: https://github.com/cpplint/cpplint
+    linter_rules_url: https://google.github.io/styleguide/cppguide.html
     cli_help_arg_name: "--help"
     examples:
       - "cpplint myfile.cpp"
