--- a/megalinter/descriptors/editorconfig.yml
+++ b/megalinter/descriptors/editorconfig.yml
@@ -7,7 +7,8 @@ test_folder: editorconfig-checker
 linters:
   # EDITORCONFIG-CHECKER
   - linter_name: editorconfig-checker
-    linter_url: https://github.com/editorconfig-checker/editorconfig-checker
+    linter_url: https://editorconfig-checker.github.io/
+    linter_repo: https://github.com/editorconfig-checker/editorconfig-checker
     linter_banner_image_url: https://raw.githubusercontent.com/editorconfig-checker/editorconfig-checker/master/docs/logo.png
     linter_rules_configuration_url: https://github.com/editorconfig-checker/editorconfig-checker#configuration
     linter_rules_inline_disable_url: https://github.com/editorconfig-checker/editorconfig-checker#excluding
