--- a/megalinter/descriptors/env.yml
+++ b/megalinter/descriptors/env.yml
@@ -5,7 +5,9 @@ file_extensions:
 linters:
   # DOTENV LINTER
   - linter_name: dotenv-linter
-    linter_url: https://github.com/dotenv-linter/dotenv-linter
+    linter_url: https://dotenv-linter.github.io/
+    linter_repo: https://github.com/dotenv-linter/dotenv-linter
+    linter_rules_url: https://dotenv-linter.github.io/#/?id=dotenv-linter
     linter_banner_image_url: https://raw.githubusercontent.com/dotenv-linter/dotenv-linter/master/logo.svg
     cli_lint_fix_arg_name: '--fix'
     examples:
