--- a/megalinter/descriptors/gherkin.yml
+++ b/megalinter/descriptors/gherkin.yml
@@ -6,6 +6,7 @@ linters:
   # GHERKIN-LINT
   - linter_name: gherkin-lint
     linter_url: https://github.com/vsiakka/gherkin-lint
+    linter_rules_url: https://github.com/vsiakka/gherkin-lint#available-rules
     linter_rules_configuration_url: https://github.com/vsiakka/gherkin-lint#rule-configuration
     config_file_name: ".gherkin-lintrc"
     linter_version_cache: "0.0.0" # Not implemented on gherkin-lint
