--- a/megalinter/descriptors/graphql.yml
+++ b/megalinter/descriptors/graphql.yml
@@ -7,6 +7,7 @@ linters:
   - linter_name: graphql-schema-linter
     name: GRAPHQL_GRAPHQL_SCHEMA_LINTER
     linter_url: https://github.com/cjoudrey/graphql-schema-linter
+    linter_rules_url: https://github.com/cjoudrey/graphql-schema-linter#built-in-rules
     linter_rules_configuration_url: https://github.com/cjoudrey/graphql-schema-linter#configuration-file
     linter_rules_inline_disable_url: https://github.com/cjoudrey/graphql-schema-linter#inline-rule-overrides
     config_file_name: .graphql-schema-linterrc
