--- a/megalinter/descriptors/html.yml
+++ b/megalinter/descriptors/html.yml
@@ -6,7 +6,9 @@ file_extensions:
 linters:
   # HTML HINT
   - linter_name: htmlhint
-    linter_url: https://github.com/htmlhint/HTMLHint
+    linter_url: https://htmlhint.com/
+    linter_repo: https://github.com/htmlhint/HTMLHint
+    linter_rules_url: https://htmlhint.com/docs/user-guide/list-rules
     linter_image_url: https://raw.githubusercontent.com/htmlhint/HTMLHint/master/website/static/img/htmlhint.png
     linter_rules_configuration_url: https://htmlhint.com/docs/user-guide/configuration
     linter_rules_inline_disable_url: https://htmlhint.com/docs/user-guide/configuration
