--- a/megalinter/descriptors/kotlin.yml
+++ b/megalinter/descriptors/kotlin.yml
@@ -8,6 +8,7 @@ linters:
   - linter_name: ktlint
     linter_url: https://ktlint.github.io
     linter_repo: https://github.com/pinterest/ktlint
+    linter_rules_url: https://ktlint.github.io/#rules
     linter_banner_image_url: https://miro.medium.com/max/655/1*sLboL6JnC9yUodFsdSMB-w.png
     cli_lint_fix_arg_name: "--format"
     examples:
