--- a/megalinter/descriptors/markdown.yml
+++ b/megalinter/descriptors/markdown.yml
@@ -6,6 +6,7 @@ linters:
   # MarkdownLint
   - linter_name: markdownlint
     linter_url: https://github.com/DavidAnson/markdownlint
+    linter_rules_url: https://github.com/DavidAnson/markdownlint#rules--aliases
     linter_image_url: https://davidanson.gallerycdn.vsassets.io/extensions/davidanson/vscode-markdownlint/0.37.1/1601748708034/Microsoft.VisualStudio.Services.Icons.Default
     linter_rules_configuration_url: https://github.com/igorshubovych/markdownlint-cli#configuration
     linter_rules_inline_disable_url: https://github.com/DavidAnson/markdownlint#configuration
