--- a/megalinter/descriptors/ruby.yml
+++ b/megalinter/descriptors/ruby.yml
@@ -11,7 +11,9 @@ install:
 linters:
   # RUBOCOP
   - linter_name: rubocop
-    linter_url: https://github.com/rubocop-hq/rubocop
+    linter_url: https://rubocop.org/
+    linter_repo: https://github.com/rubocop-hq/rubocop
+    linter_rules_url: https://docs.rubocop.org/rubocop/cops.html
     linter_banner_image_url: https://raw.githubusercontent.com/rubocop-hq/rubocop/master/logo/rubo-logo-horizontal.png
     linter_rules_configuration_url: https://docs.rubocop.org/rubocop/0.92/configuration.html
     linter_rules_inline_disable_url: https://docs.rubocop.org/rubocop/0.92/configuration.html#disabling-cops-within-source-code
