--- a/megalinter/descriptors/sql.yml
+++ b/megalinter/descriptors/sql.yml
@@ -6,6 +6,7 @@ linters:
   # SQL-LINT
   - linter_name: sql-lint
     linter_url: https://github.com/joereynolds/sql-lint
+    linter_rules_url: https://github.com/joereynolds/sql-lint#checks
     linter_rules_configuration_url: https://sql-lint.readthedocs.io/en/latest/files/configuration.html
     config_file_name: .sql-config.json
     cli_config_arg_name: "--config"
