--- a/megalinter/descriptors/xml.yml
+++ b/megalinter/descriptors/xml.yml
@@ -6,6 +6,7 @@ linters:
   # XML LINT
   - linter_name: xmllint
     linter_url: http://xmlsoft.org/xmllint.html
+    linter_rules_url: http://xmlsoft.org/xmllint.html#diagnostics
     version_extract_regex: "(?<=libxml version )\\d+(\\d+)+"
     cli_help_arg_name: "--help"
     help_command_return_code: 1
