--- a/megalinter/descriptors/yaml.yml
+++ b/megalinter/descriptors/yaml.yml
@@ -6,7 +6,9 @@ file_extensions:
 linters:
   # YAMLLINT
   - linter_name: yamllint
-    linter_url: https://github.com/adrienverge/yamllint
+    linter_url: https://yamllint.readthedocs.io/
+    linter_repo: https://github.com/adrienverge/yamllint
+    linter_rules_url: https://yamllint.readthedocs.io/en/stable/rules.html
     linter_rules_configuration_url: https://yamllint.readthedocs.io/en/stable/configuration.html#configuration
     config_file_name: .yaml-lint.yml
     examples:
