mega-linter-runner for local runs (#98)
- Remove ANSI color codes from log files
- Add performances by linter in console log
- New option **SHOW_ELAPSED_TIME** , allowing the number of seconds elapsed by linter in reports

- NPM package **Mega-Linter runner**
  - runs Mega-Linter locally, using .mega-linter.yml configuration (requires docker installed on your computer)
  - test cases added in CI

--- a/.github/workflows/deploy-DEV.yml
+++ b/.github/workflows/deploy-DEV.yml
@@ -99,3 +99,16 @@ jobs:
             mega-linter.log
             linter-helps.json
             linter-versions.json
+
+      # Test mega-linter-runner with newly created image
+      - name: Setup Node
+        if: ${{ success() }} || ${{ failure() }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: "12"
+      - name: Install NPM dependencies
+        if: ${{ success() }} || ${{ failure() }}
+        run: cd mega-linter-runner && sudo npm ci && sudo npm link
+      - name: Run mega-linter-runner tests
+        if: ${{ success() }} || ${{ failure() }}
+        run: cd mega-linter-runner && MEGALINTER_RELEASE=${GITHUB_SHA} MEGALINTER_NO_DOCKER_PULL=true npm run test
