--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -12,5 +12,8 @@ DISABLE:
 DISABLE_LINTERS:
   - BASH_SHFMT
   - DOCKERFILE_HADOLINT
-FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|lib/)'
+  - JAVASCRIPT_STANDARD
+FILTER_REGEX_EXCLUDE: '(\.automation/test|docs/javascripts|TEMPLATES)'
+BASH_FILTER_REGEX_EXCLUDE: (lib)
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
+SHOW_ELAPSED_TIME: true
