--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,24 @@
         {
             "type": "bashdb",
             "request": "launch",
-            "name": "Test Linter",
+            "name": "Test Linter (DEPRECATED)",
             "program": ".vscode/testlinter.sh",
             "cwd": "${workspaceFolder}",
             "internalConsoleOptions": "openOnSessionStart",
             "presentation": {
                 "group": "aLinter"
             }
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Test mega-linter-runner",
+            "address": "127.0.0.1",
+            "port": 9229,
+            "smartStep": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         }
     ]
 }
