--- a/.github/workflows/deploy-PROD.yml
+++ b/.github/workflows/deploy-PROD.yml
@@ -41,6 +41,19 @@ jobs:
         with:
           fetch-depth: 0
 
+      ########################################################
+      # Publish updated version of mega-linter-runner on NPM #
+      ########################################################
+      - uses: actions/setup-node@v2.1.2
+        with:
+          node-version: "12.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: cd mega-linter-runner && npm install
+      - run: cd mega-linter-runner && npm version ${GITHUB_SHA}
+      - run: cd mega-linter-runner && npm publish --tag beta || echo "mega-linter-runner beta not published"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       #####################
       # Run Deploy script #
       #####################
