--- a/.github/workflows/deploy-RELEASE.yml
+++ b/.github/workflows/deploy-RELEASE.yml
@@ -13,6 +13,7 @@
 #######################################
 # Start the job on all push to master #
 #######################################
+name: "Build & Deploy - RELEASE"
 on:
   release:
     # Want to run the automation when a release is created
