--- a/.github/workflows/deploy-ALPHA.yml
+++ b/.github/workflows/deploy-ALPHA.yml
@@ -13,6 +13,7 @@
 #######################################
 # Start the job on all push to master #
 #######################################
+name: "Build & Deploy - ALPHA"
 on:
   push:
     branches:
@@ -22,6 +23,14 @@ on:
 # Set the Job #
 ###############
 jobs:
+  # Cancel duplicate jobs: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
+  cancel_duplicates:
+    name: Cancel duplicate jobs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fkirc/skip-duplicate-actions@master
+        with:
+          github_token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
   build:
     # Name the Job
     name: Deploy Docker Image - ALPHA
