--- a/.github/workflows/test-mega-linter-runner.yml
+++ b/.github/workflows/test-mega-linter-runner.yml
@@ -1,9 +1,17 @@
 ---
-on:
-  push:
-  pull_request:
+name: "Test mega-linter-runner"
+on: [push, pull_request]
 
 jobs:
+  # Cancel duplicate jobs: https://github.com/fkirc/skip-duplicate-actions#option-3-cancellation-only
+  cancel_duplicates:
+    name: Cancel duplicate jobs
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fkirc/skip-duplicate-actions@master
+        with:
+          github_token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
+
   build:
     name: Test Mega-Linter runner
     # Set the agent to run on
