--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: "Mega-Linter"
 author: "Nicolas Vuillamy"
 description: "Combine all available linters to automatically validate your sources without configuration !"
+outputs:
+  has_updated_sources:
+    description: "0 if no source file has been updated, 1 if source files has been updated"
 runs:
   using: "docker"
   image: "docker://nvuillam/mega-linter:v4"
