--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ theme:
         - navigation.expand
     logo: assets/images/mega-linter-square.png
     favicon: assets/images/mega-linter-square.png
+    palette:
+        primary: teal
 markdown_extensions:
     - pymdownx.emoji:
           emoji_index: !!python/name:materialx.emoji.twemoji
