Fix actions from forked repos + comments in generated markdown (#120)
- Run some actions/steps only when PR is from same repository
- Add comments in markdown generated by build.py

* typo

* Update documentation

* More logs when GithubCommentReporter does not post

* Run some actions/steps only when PR is from same repository

* Add comments at the beginning of generated files

* Debug Github context variables

* [Mega-Linter] Apply linters fixes

* typo

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -245,4 +245,5 @@ nav:
           - "Console": "reporters/ConsoleReporter.md"
     - "Mega-Linter badge": "badge.md"
     - "Mega-Linter vs Super-Linter": "mega-linter-vs-super-linter.md"
+    - "Contribute": "how-to-contribute.md"
     - "Changelog": "CHANGELOG.md"
